Allow larger patches via twisted
Or maybe a restart fixed the ssh patch submission.  But anyway.

--- a/master.cfg
+++ b/master.cfg
@@ -1898,6 +1898,10 @@ webdir = File("public_html")
 webdir.contentTypes['.egg'] = 'application/octet-stream'
 webdir.contentTypes['.whl'] = 'application/octet-stream'
 
+# Allow patches of up to 1M in size
+from twisted.protocols.basic import NetstringReceiver
+NetstringReceiver.MAX_LENGTH = 1000000
+
 import re
 def _select_builders(builders, regex):
     r = re.compile(regex)
