BF: update excludes for tests

--- a/master.cfg
+++ b/master.cfg
@@ -1691,13 +1691,33 @@ WHEEL_SERVER = HTTP_SERVER_URL
 # https://raw.githubusercontent.com/matplotlib/matplotlib/master/tests.py
 MPL_TESTS_FNAME = 'mpl_tests.py'
 MPL_TESTS_URL = HTTP_CACHE_URL + MPL_TESTS_FNAME
+SCIPY_EXCLUDE_TESTS = [
+    # https://github.com/scipy/scipy/issues/3853
+    'test_no_64',
+    'test_resiliency_all_32',
+    'test_resiliency_all_64',
+    'test_resiliency_limit_10',
+    'test_resiliency_random',
+    'test_ufunc_object_array',
+    'test_unary_ufunc_overrides',
+    'test_binary_ufunc_overrides',
+]
+scipy_extra_argv = ['--exclude=' + regex for regex in SCIPY_EXCLUDE_TESTS]
+
+scipy_test_args = 'extra_argv=[{0}]'.format(
+    ', '.join(['"{0}"'.format(p) for p in scipy_extra_argv]))
+
+scipy_test_cmd = ['python', '-c',
+                  'import sys; '
+                  'import scipy; '
+                  'sys.exit(not scipy.test({0}))'.format(scipy_test_args)]
 mpl_test_setup1 = ['python', Property('bs_tools'), 'get-url', MPL_TESTS_URL, MPL_TESTS_FNAME]
 mpl_test_setup2 = ['python', '-c',
                    'import os, shutil; '
                    'shutil.rmtree(os.path.expanduser("~/.matplotlib"))']
 # Known mpl test failure for Python 3.4
 # https://github.com/matplotlib/matplotlib/pull/2981
-mpl_test_cmd = ['python', MPL_TESTS_FNAME, '-e', 'test_override_builtins']
+mpl_test_cmd = ['python', MPL_TESTS_FNAME],
 numexpr_test_cmd = ['python', '-c',
                     'import sys; '
                     'import numexpr; '
@@ -1718,19 +1738,15 @@ test_commands = [['nosetests', 'markupsafe'],
                  # See: https://github.com/tornadoweb/tornado/issues/1136
                  #['python', '-m', 'tornado.test.runtests'],
                  nptest_command('numpy', verbose=None),
-                 nptest_command('scipy', verbose=None),
+                 scipy_test_cmd,
                  mpl_test_setup1,
                  mpl_test_setup2,
                  mpl_test_cmd,
                  ['iptest'],
                  # Some known fails for pandas tests version 0.14.1
                  ['nosetests', 'pandas',
-                 # Error in test_fred fixed by f6f84db
-                 '-e', 'test_fred',
                  # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
-                 '-e', 'test_clipboard',
-                 # Error in datetime parsing apparently addressed by 0621f9f
-                 '-e', 'test_replace_datetime'],
+                 '-e', 'test_clipboard'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
