BF: trailing comma for mpl test runner

--- a/master.cfg
+++ b/master.cfg
@@ -1717,7 +1717,7 @@ mpl_test_setup2 = ['python', '-c',
                    'shutil.rmtree(os.path.expanduser("~/.matplotlib"))']
 # Known mpl test failure for Python 3.4
 # https://github.com/matplotlib/matplotlib/pull/2981
-mpl_test_cmd = ['python', MPL_TESTS_FNAME],
+mpl_test_cmd = ['python', MPL_TESTS_FNAME]
 numexpr_test_cmd = ['python', '-c',
                     'import sys; '
                     'import numexpr; '
