NF: add back tornado tests in hope

--- a/master.cfg
+++ b/master.cfg
@@ -1736,7 +1736,7 @@ sympy_whl_test_cmd = ['python', '-c',
 test_commands = [['nosetests', 'markupsafe'],
                  # Tornado tests failing on this system
                  # See: https://github.com/tornadoweb/tornado/issues/1136
-                 #['python', '-m', 'tornado.test.runtests'],
+                 ['python', '-m', 'tornado.test.runtests'],
                  nptest_command('numpy', verbose=None),
                  scipy_test_cmd,
                  mpl_test_setup1,
