Turn up build timeout for laptop tests

--- a/master.cfg
+++ b/master.cfg
@@ -1772,6 +1772,7 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
                                      ('ipython[notebook,test]', '', pre),
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
+                                    build_timeout=2400,
                                     find_links = find_links)))
     requires_builder_name = 'scipy-stack-{0}-wheel-requires'.format(py_version)
     c['builders'].append(BuilderConfig(
