BF: fix build timeout

--- a/master.cfg
+++ b/master.cfg
@@ -1636,7 +1636,8 @@ c['builders'] += numpy_bot.build_builders(
 
 def wheel_factory(python_version, pip_installs,
                   test_commands=(),
-                  find_links=()):
+                  find_links=(),
+                  build_timeout=1200):
     """ Make a factory for the wheel build slave """
     # OSX wheel builders
     whl_fac = BuildFactory()
@@ -1682,7 +1683,8 @@ def wheel_factory(python_version, pip_installs,
     for test_command in test_commands:
         whl_fac.addStep(ShellCommand(command=test_command,
                                      env=env,
-                                     workdir=workdir))
+                                     workdir=workdir,
+                                     timeout=build_timeout))
     return whl_fac
 
 
