BF: add build timeout to stack requires build

--- a/master.cfg
+++ b/master.cfg
@@ -1783,6 +1783,7 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
         factory = wheel_factory(py_version,
                                 ((wheel_requires, '-r', False),),
                                 test_commands = test_commands,
+                                build_timeout=2400,
                                 find_links = ())))
     requires_scheduler_name = requires_builder_name + "-scheduler"
     build_hour += 1
