Update dipy Cython dependency; increase ARM timeout

--- a/master.cfg
+++ b/master.cfg
@@ -682,7 +682,8 @@ dipy_bot = GithubBot('nipy', 'dipy',
     'open("matplotlibrc", "wt").write("backend : agg"); '
     'argv = ["", "", "--with-doctest", "--verbosity=3", "--exe", "dipy"]; '
     'nose.core.TestProgram(argv=argv, addplugins=[doctests.Doctest()])'],
-    pip_depends = ('nose', 'cython>=0.17', 'nibabel')
+    pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
+    build_timeout = 4800, # allow for longer registration builds
 )
 # dipy bot for linux machines with optional easy_depends and pip_depends that
 # need an X window for testing
