Refactor dipy command (why green despite Windows fail?)

--- a/master.cfg
+++ b/master.cfg
@@ -678,9 +678,9 @@ nipy_bot = GithubBot('nipy', 'nipy',
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = ['python', '-c',
     'import nose; '
-    'from nose.plugins import doctests ;'
+    'from nose.plugins import doctests; '
     'open("matplotlibrc", "wt").write("backend : agg"); '
-    'argv = ["", "", "--with-doctest", "--verbosity=3", "--exe", "dipy"]; '
+    'argv = ["", "dipy", "--with-doctest", "--verbosity=3", "--exe"]; '
     'nose.core.TestProgram(argv=argv, addplugins=[doctests.Doctest()])'],
     pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
     build_timeout = 4800, # allow for longer registration builds
