--- a/master.cfg
+++ b/master.cfg
@@ -70,7 +70,8 @@ from buildbot.schedulers.forcesched import (ForceScheduler,
                                             FixedParameter,
                                             ChoiceStringParameter,
                                             StringParameter)
-from buildbot.schedulers.basic import SingleBranchScheduler, AnyBranchScheduler
+from buildbot.schedulers.basic import (SingleBranchScheduler,
+                                       AnyBranchScheduler)
 from buildbot.schedulers import timed
 from buildbot.schedulers.triggerable import Triggerable
 from buildbot.schedulers.trysched import Try_Jobdir
@@ -86,11 +87,6 @@ HTTP_SERVER_URL='https://nipy.bic.berkeley.edu/scipy_installers/'
 
 # Directory for cached downloads of files needed by buildbots
 HTTP_CACHE_URL = HTTP_SERVER_URL + 'buildbot-files/'
-
-# Canonical URL for ez_setup
-# https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py
-# Cached copy set by mb312 account crontab
-EZ_SETUP_URL = HTTP_CACHE_URL + 'ez_setup.py'
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -220,10 +216,7 @@ class GithubBot(object):
                  test_cmd,
                  doc_build_cmd=None,
                  built_doc_src=None,
-                 easy_depends=(), # careful with easy_install and system packages
                  pip_depends=(),
-                 # careful with easy_install and system packages
-                 doc_easy_depends=(),
                  doc_pip_depends=('sphinx',),
                  src_subdir=None,
                  download_dir=None,
@@ -245,9 +238,7 @@ class GithubBot(object):
         self.doc_build_cmd = doc_build_cmd
         self.built_doc_src = built_doc_src
         # Dependencies for install / test
-        self.easy_depends = easy_depends # easy_install installs
         self.pip_depends = pip_depends # pip
-        self.doc_easy_depends = doc_easy_depends # easy_installs for docs
         self.doc_pip_depends = doc_pip_depends # pip installs for docs
         self.src_subdir = src_subdir # Subdirectory containing source
         if download_dir is None:
@@ -322,13 +313,6 @@ class GithubBot(object):
                 minute=minute,
                 onlyIfChanged=ifchanged)
 
-    def _easy_install(self, factory, easy_depends, env):
-        for pkg_spec in easy_depends:
-            if isinstance(pkg_spec, basestring):
-                pkg_spec = [pkg_spec]
-            cmd = ['easy_install'] + list(pkg_spec)
-            factory.addStep(ShellCommand(command=cmd, env=env))
-
     def _pip_install(self, factory, pip_depends, env):
         for pkg_spec in pip_depends:
             # We need the 'ignore-installed' flag to force pip to install the
@@ -365,46 +349,34 @@ class GithubBot(object):
         env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
         workdir = Interpolate("%(prop:venv_dir)s")
         if install_pip:
-            # Upgrade setuptools and pip if necessary for wheel installs
-            # Can't install pip with pip because it can't delete itself
+            # Upgrade pip if necessary for wheel installs
             factory.addStep(ShellCommand(
-                command=['easy_install', '-U', 'pip>=1.4'],
-                env=env))
-        # Can't install easy_install with easy_install because it can't delete
-        # itself.  Use the bootstrap script to avoid version conflict problems
-        # from setuptools' nuclear path behavior.
-        factory.addStep(ShellCommand(
-            command = ['python', 'bs_tools.py', 'get-url', EZ_SETUP_URL,
-            'ez_setup.py']))
-        if install_pip:
-            factory.addStep(ShellCommand(
-                command=['python', 'ez_setup.py'],
+                command=['pip', 'install', '--ignore-installed', 'pip>=1.4'],
                 env=env))
         return env, workdir
 
     def _code_build_factory(self,
                             python=None,
-                            easy_depends=None,
                             pip_depends=None,
                             pre_build_cmds=(),
                             branch=None,
                             install_pip=None):
-        if easy_depends is None:
-            easy_depends = self.easy_depends
         if pip_depends is None:
             pip_depends = self.pip_depends
         factory = BuildFactory()
         git_kwargs = {'branch': branch} if branch is not None else {}
-        factory.addStep(Git(repourl=self.git_url, mode='full', retry=(15, 5), **git_kwargs))
+        factory.addStep(Git(repourl=self.git_url,
+                            mode='full',
+                            retry=(15, 5),
+                            **git_kwargs))
         # Make virtualenv, return environment, workdir of venv
         my_env, workdir = self._make_virtualenv(
             factory, python,
-            install_pip=bool(install_pip or easy_depends or pip_depends))
+            install_pip=bool(install_pip or pip_depends))
         # Any pre-building commands
         for cmd in pre_build_cmds:
             factory.addStep(ShellCommand(command=cmd))
         # Add install and runtime dependencies
-        self._easy_install(factory, easy_depends, my_env)
         self._pip_install(factory, pip_depends, my_env)
         # Work out working directory for install
         if not self.src_subdir is None:
@@ -419,7 +391,6 @@ class GithubBot(object):
     def factory(self,
                 test_cmd=None,
                 python=None,
-                easy_depends=None,
                 pip_depends=None,
                 pre_build_cmds=(),
                 post_cmds=(),
@@ -436,7 +407,7 @@ class GithubBot(object):
         if test_dir is None:
             test_dir = self.test_dir
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends, pre_build_cmds, branch=branch)
+            python, pip_depends, pre_build_cmds, branch=branch)
         # Additional options for ShellCommands, if provided.  To not
         # rely on knowing internal logic (either handles None as the
         # default value), we explicitly construct a dictionary only
@@ -469,21 +440,23 @@ class GithubBot(object):
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=test_dir, **kwargs))
         for cmd in post_cmds:
-            factory.addStep(ShellCommand(command=shlex.split(cmd, posix=True),
-                                         env=env, workdir=workdir, **kwargs))
+            factory.addStep(
+                ShellCommand(command=shlex.split(cmd, posix=True),
+                             env=env,
+                             workdir=workdir,
+                             **kwargs))
         return factory
 
     def bdist_factory(self,
                       bdist_type,
                       test_cmd=None,
                       python=None,
-                      easy_depends=None,
                       pip_depends=None,
                       pre_build_cmds=()):
         if test_cmd is None:
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends, pre_build_cmds, install_pip=True)
+            python, pip_depends, pre_build_cmds, install_pip=True)
         # Build binary format(s)
         if python is None: # Use virtualenv python
             my_python = 'python'
@@ -569,7 +542,6 @@ class GithubBot(object):
             workdir=build_workdir,
             **kwargs))
         # Add install and runtime dependencies
-        self._easy_install(factory, self.doc_easy_depends, my_env)
         self._pip_install(factory, self.doc_pip_depends, my_env)
         if not doc_doctest_cmd is None:
             factory.addStep(ShellCommand(command=doc_doctest_cmd, env=my_env))
@@ -581,7 +553,6 @@ class GithubBot(object):
     def build_builders(self, name_slavenames,
                        test_cmd=None,
                        python=None,
-                       easy_depends=None,
                        pip_depends=None,
                        pre_build_cmds=(),
                        post_cmds=(),
@@ -595,9 +566,14 @@ class GithubBot(object):
         builders = []
         for branch in branches:
             branch_builders = self._factory_builders(
-                self.factory(test_cmd, python, easy_depends, pip_depends,
-                             pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
-                             install_cmd=install_cmd, install_wd=install_wd, branch=branch),
+                self.factory(test_cmd,
+                             python,
+                             pip_depends,
+                             pre_build_cmds=pre_build_cmds,
+                             post_cmds=post_cmds,
+                             install_cmd=install_cmd,
+                             install_wd=install_wd,
+                             branch=branch),
                 name_slavenames,
                 None if is_one_default_branch(branches, branch) else branch)
 
@@ -685,16 +661,15 @@ dipy_bot = GithubBot('nipy', 'dipy',
     pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
     build_timeout = 4800, # allow for longer registration builds
 )
-# dipy bot for linux machines with optional easy_depends and pip_depends that
+# dipy bot for linux machines with optional pip_depends that
 # need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
-    easy_depends = ('nose', 'nibabel')
+    pip_depends = ('nose', 'nibabel')
 )
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True),
-    easy_depends = ('Traits',),
-    pip_depends = ('nose', 'nibabel', 'networkx')
+    pip_depends = ('Traits, nose', 'nibabel', 'networkx')
 )
 regreg_bot = GithubBot('regreg', 'regreg',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
@@ -734,7 +709,7 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe -s sklearn'),
     doc_build_cmd = "make -C doc html",
     built_doc_src = "doc/build",
-    easy_depends = ('nose',),
+    pip_depends = ('nose',),
 )
 # Fail2Ban bots -- need separate ones for different branches because
 # tests are invoked differently across them
@@ -1402,7 +1377,6 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
             c['builders'] += bot.build_builders(
                 ((builder_name, osx_mountainlion_slaves),),
                 python='python' + pyver,
-                easy_depends = (), # Turn off dependency install
                 pip_depends = (nose_target,), # ditto
                 install_cmd = install_cmd,
                 install_wd = 'build/venv')
