--- a/master.cfg
+++ b/master.cfg
@@ -331,7 +331,7 @@ class GithubBot(object):
         # account settings present in setup.cfg and might try to install
         # under /usr/lib as happened with fail2ban bot.  So deploy virtualenv
         # while stepping into a new clean directory.
-        venv_params = ['--distribute', '--system-site-packages', '../venv']
+        venv_params = ['--system-site-packages', '../venv']
         if not python is None:
             venv_params = ['--python=' + python] + venv_params
         factory.addStep(ShellCommand(command=['virtualenv'] + venv_params,
@@ -339,11 +339,11 @@ class GithubBot(object):
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
-        factory.addStep(SetPropertyFromCommand(command=shlex.split(
-            'python bs_tools.py path-prepend-str venv'),
+        factory.addStep(SetPropertyFromCommand(command=[
+            'python', 'bs_tools.py', 'path-prepend-str', 'venv'],
             property='venv_script_dir'))
-        factory.addStep(SetPropertyFromCommand(command=shlex.split(
-            'python bs_tools.py abspath venv'),
+        factory.addStep(SetPropertyFromCommand(command=[
+            'python', 'bs_tools.py', 'abspath', 'venv'],
             property='venv_dir'))
         # Set env, with virtualenv in front of the path
         env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
@@ -976,12 +976,12 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
         mode='full', retry=(15, 5)))
     # Touch c files to make sure build doesn't fail because of c file checkout
     # times
-    factory.addStep(ShellCommand(command=shlex.split(
-        'python tools/touch_cython_cs.py')))
+    factory.addStep(ShellCommand(command=
+                                 ['python', 'tools/touch_cython_cs.py']))
     # Make virtualenv into which to install
     factory.addStep(
-        ShellCommand(command=shlex.split(
-            py_path + r'/bin/virtualenv --distribute --system-site-packages venv')
+        ShellCommand(command=[
+            py_path + r'/bin/virtualenv', '--system-site-packages', 'venv']
             ))
     # Install into virtualenv
     factory.addStep(
@@ -1015,7 +1015,7 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
 
 c['builders'] = []
 # nibabel exe builders
-nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
+nibabel_test_cmd = ['nosetests', '--verbosity=3' '--with-doctest nibabel']
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-27',
     slavenames=win7_32_slaves,
