NF: add psychopy into the pile

--- a/master.cfg
+++ b/master.cfg
@@ -719,6 +719,13 @@ fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
     test_dir = './build/',
 )
 
+# PsychoPy
+psychopy_bot = GithubBot('psychopy', 'psychopy',
+    test_cmd = shlex.split('xvfb-run -s "-screen 0 1024x768x24 -ac +extension GLX +render -noreset" python ../psychopy/tests/runPytest.py -v -s -m "not needs_sound"'),
+    test_env = dict(USER="nobody", TRAVIS="true"),
+    branches = ['master'],
+)
+
 # Sympy
 sympy_bot = GithubBot('sympy', 'sympy',
     test_cmd = ['python', '-c',
@@ -763,6 +770,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                sympy_bot,
                                                numpy_bot,
                                                fail2ban_bot,
+                                               psychopy_bot,
                                                )]
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
@@ -1581,6 +1589,18 @@ c['builders'] += fail2ban_bot.build_builders(
         ('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),),
     branches=['0.8'],
     install_cmd=None)
+# Psychopy
+c['builders'] += psychopy_bot.build_builders(
+    (('psychopy-py2.x-sid-sparc', sparc_slaves_sid),
+     ('psychopy-py2.7-wheezy-sparc', sparc_slaves_wheezy),
+     ('psychopy-py2.6-osx-10.6', osx_snowleopard_slaves),
+     ('psychopy-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('psychopy-py2.7-ppc', debian_ppc_slaves),
+     ('psychopy-py2.6-arm', arm_slaves),
+     ('psychopy-py2.7-win7', win7_64_slaves),
+    ),
+    schedulers=c['schedulers'],           # in-place modify
+    install_cmd=None)
 # Sympy
 c['builders'] += sympy_bot.build_builders(
     (('sympy-py2.6-32', linux_32_slaves),
@@ -1924,8 +1944,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 169)
-    assert(len(c['schedulers']) == 232)
+    assert(len(c['builders']) == 176)
+    assert(len(c['schedulers']) == 240)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
