Add lingual box to sparcs + a 2cpu lock for it

--- a/master.cfg
+++ b/master.cfg
@@ -133,8 +133,8 @@ if len(set(local_setup.slave_passes)) != len(local_setup.slave_passes):
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
 debian_ppc_slaves = ['debian-ppc-32']
-sparc_slaves_sid = ['nd-bb-slave-sparc-sid']
-sparc_slaves_wheezy = ['nd-bb-slave-sparc-wheezy']
+sparc_slaves_sid = ['nd-bb-slave-sparc-sid', 'nd-bb-slave-sparc64-sid']
+sparc_slaves_wheezy = ['nd-bb-slave-sparc-wheezy', 'nd-bb-slave-sparc64-wheezy']
 sparc_slaves = ['nd-bb-slave-sparc']
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
@@ -164,8 +164,14 @@ slave_locks = {}
 # vagus sparc box has only 4 CPUs, thus we should not run more than 4
 # jobs in parallel
 add_lock(slave_locks,
-         sparc_slaves_sid + sparc_slaves_wheezy + sparc_slaves,
+         ['nd-bb-slave-sparc'+suf for suf in ['', '-wheezy', '-sid']],
          MasterLock("vagus", maxCount=4), 'counting')
+
+# lingual sparc box has only 2 CPUs, thus we should not run more than 2
+# jobs in parallel
+add_lock(slave_locks,
+         ['nd-bb-slave-sparc64'+suf for suf in ['-wheezy', '-sid']],
+         MasterLock("lingual", maxCount=2), 'counting')
 
 # wheel slave does awful things to /usr/local, should only run one job at a
 # time
