BF: fix nibabel command for binary builders

--- a/master.cfg
+++ b/master.cfg
@@ -1009,7 +1009,7 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
 
 c['builders'] = []
 # nibabel exe builders
-nibabel_test_cmd = ['nosetests', '--verbosity=3' '--with-doctest nibabel']
+nibabel_test_cmd = ['nosetests', '--verbosity=3', '--with-doctest nibabel']
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-27',
     slavenames=win7_32_slaves,
