BF: add cython dependency for nox builds.

--- a/master.cfg
+++ b/master.cfg
@@ -670,7 +670,7 @@ dipy_bot = GithubBot('nipy', 'dipy',
 # need an X window for testing
 dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
-    pip_depends = ('nose', 'nibabel')
+    pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
 )
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True),
