Refactor using python.org binaries

--- a/master.cfg
+++ b/master.cfg
@@ -210,6 +210,13 @@ def get_branch_builder_name(builder, branches, branch=None):
     else:
         return '%s_%s' % (builder, sanitize_branch_name(branch))
 
+
+def pyorg_pybin(pyver):
+    return (
+        '/Library/Frameworks/Python.framework/Versions/{0}/bin/python{0}'.format(
+            pyver))
+
+
 # Helper functions and constants
 class GithubBot(object):
     """ Class to make buildbot stuff based round a github repo
@@ -1241,11 +1248,8 @@ for slavenames, bdist_suffix in (
 # Make numpy wheels on 10.9, test on 10.6
 building_slaves = osx_mountainlion_slaves
 testing_slaves = osx_snowleopard_slaves
-for python_bin, py_ver in (
-        ('python', '2.7'),
-        ('python3', '3.3'),
-        ('python3', '3.4')):
-    python_exe = '/Library/Frameworks/Python.framework/Versions/{0}/bin/{1}'.format(py_ver, python_bin)
+for py_ver in ('2.7', '3.3', '3.4'):
+    python_exe = pyorg_pybin(py_ver)
     builder_name = 'numpy-bdist-whl-osx-' + py_ver
     tester_name = builder_name + '-downloaded'
     test_scheduler_name = tester_name + '-scheduler'
@@ -1384,7 +1388,7 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
                 nose_target = 'nose'
             c['builders'] += bot.build_builders(
                 ((builder_name, osx_mountainlion_slaves),),
-                python='python' + pyver,
+                python=pyorg_pybin(pyver),
                 pip_depends = (nose_target,), # ditto
                 install_cmd = install_cmd,
                 install_wd = 'build/venv')
