Adding statsmodels into pip_depends for PyMVPA

--- a/master.cfg
+++ b/master.cfg
@@ -713,7 +713,7 @@ pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
     test_env = dict(MVPA_TESTS_LABILE='no', MVPA_MATPLOTLIB_BACKEND='agg', MVPA_TESTS_WTF='yes'),
     doc_build_cmd = "make htmldoc",
     built_doc_src = "build/html",
-    pip_depends = ('nose',),
+    pip_depends = ('nose', 'statsmodels'),
     build_timeout = 3600, # allow for its longer testing especially for sparcs.
 )
 # sklearn bot, primarily for sparc testing
