Remove --ignore-installed for most pip installs
To fix a bizarre problem with pymvpa builds on Windows.

--- a/master.cfg
+++ b/master.cfg
@@ -57,6 +57,7 @@ which can react any way it likes, including sending further BuildSets.
 """
 
 from os.path import join as pjoin
+import re
 
 # This is convenient for splitting sh commands into lists
 import shlex
@@ -107,6 +108,9 @@ secret_passwords.py instead, and don't put in version control.
 """
 import local_setup
 reload(local_setup) # so buildbot reconfig refreshes these parameters
+
+# pip installs that should always be '--ignore-installed'
+PIP_IGNORE_INSTALLS = ('nose',)
 
 # Check parameters in setup
 for attr_name in ('slave_passes', 'master_url', 'slave_port'):
@@ -325,6 +329,14 @@ class GithubBot(object):
                 minute=minute,
                 onlyIfChanged=ifchanged)
 
+    def _needs_ignore_installed(self, pkg_spec):
+        # True if packages in this `pkg_spec` need ``--ignore-installed``
+        for spec in pkg_spec:
+            pkg_name = re.split('[\[ =<>!,]*', spec)[0]
+            if pkg_name in PIP_IGNORE_INSTALLS:
+                return True
+        return False
+
     def _pip_install(self, factory, pip_depends, env):
         for pkg_spec in pip_depends:
             # We need the 'ignore-installed' flag to force pip to install the
@@ -333,7 +345,9 @@ class GithubBot(object):
             # python and we don't get the virtualenv python.
             if isinstance(pkg_spec, basestring):
                 pkg_spec = [pkg_spec]
-            cmd = ['pip', 'install', '--ignore-installed']  # fresh install
+            cmd = ['pip', 'install']
+            if self._needs_ignore_installed(pkg_spec):
+                cmd += ['--ignore-installed']
             factory.addStep(ShellCommand(command=cmd + list(pkg_spec),
                         env=env))
 
@@ -1912,7 +1926,6 @@ webdir.contentTypes['.whl'] = 'application/octet-stream'
 from twisted.protocols.basic import NetstringReceiver
 NetstringReceiver.MAX_LENGTH = 1000000
 
-import re
 def _select_builders(builders, regex):
     r = re.compile(regex)
     return [b for b in builders
