Nipype dependency fixes

--- a/master.cfg
+++ b/master.cfg
@@ -695,7 +695,7 @@ dipy_bot_nox = GithubBot('nipy', 'dipy',
 )
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True),
-    pip_depends = ('Traits, nose', 'nibabel', 'networkx')
+    pip_depends = ('Traits', 'nose', 'nibabel', 'networkx', 'python-dateutil')
 )
 regreg_bot = GithubBot('regreg', 'regreg',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest regreg'),
