--- a/master.cfg
+++ b/master.cfg
@@ -110,7 +110,7 @@ import local_setup
 reload(local_setup) # so buildbot reconfig refreshes these parameters
 
 # pip installs that should always be '--ignore-installed'
-PIP_IGNORE_INSTALLS = ('nose',)
+PIP_IGNORE_INSTALLS = ('nose', 'sphinx')
 
 # Check parameters in setup
 for attr_name in ('slave_passes', 'master_url', 'slave_port'):
