Replace OSX ppc with Debian ppc slave

--- a/master.cfg
+++ b/master.cfg
@@ -136,11 +136,10 @@ if len(set(local_setup.slave_passes)) != len(local_setup.slave_passes):
 # Slave groups
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
-debian_ppc_slaves = ['debian-ppc-32']
+debian_ppc_slaves = ['debian-ppc-64']
 sparc_slaves_sid = ['nd-bb-slave-sparc-sid', 'nd-bb-slave-sparc64-sid']
 sparc_slaves_wheezy = ['nd-bb-slave-sparc-wheezy', 'nd-bb-slave-sparc64-wheezy']
 sparc_slaves = ['nd-bb-slave-sparc']
-osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
 osx_snowleopard_slaves = ['osx-10.6']
 osx_lion_slaves = ['osx-10.7']
@@ -823,7 +822,7 @@ c['schedulers'] = sum([
                            'nibabel-py2.7-osx-10.6',
                            'nibabel-py2.7-osx-10.7',
                            'nibabel-py2.7-osx-10.8',
-                           'nibabel-py2.6-osx-10.5-ppc',
+                           'nibabel-py2.7-debian-ppc',
                            'nibabel-py3.4',
                            'nibabel-py3.3',
                            'nibabel-py2.7-pyd0.9.7',
@@ -853,7 +852,7 @@ c['schedulers'] = sum([
                         'nipy-py2.7-osx-10.6',
                         'nipy-py2.7-osx-10.7',
                         'nipy-py2.7-osx-10.8',
-                        'nipy-py2.6-osx-10.5-ppc',
+                        'nipy-py2.7-debian-ppc',
                         'nipy-py3.4',
                         'nipy-py3.3',
                         'nipy-py2.7-sym0.7.0-nib1.2.0',
@@ -868,7 +867,7 @@ c['schedulers'] = sum([
                         'dipy-py2.7-osx-10.6',
                         'dipy-py2.7-osx-10.7',
                         'dipy-py2.7-osx-10.8',
-                        'dipy-py2.6-osx-10.5-ppc',
+                        'dipy-py2.7-debian-ppc',
                         'dipy-py3.4',
                         'dipy-py3.3',
                        ]),
@@ -878,7 +877,7 @@ c['schedulers'] = sum([
                           'nipype-py2.7-fedora',
                           'nipype-py2.7-osx-10.6',
                           'nipype-py2.7-osx-10.8',
-                          'nipype-py2.6-osx-10.5-ppc',
+                          'nipype-py2.7-debian-ppc',
                        ]),
     regreg_bot.schedulers(['regreg-py2.6',
                           'regreg-py2.6-32',
@@ -887,7 +886,7 @@ c['schedulers'] = sum([
                           'regreg-py2.7-osx-10.6',
                           'regreg-py2.7-osx-10.7',
                           'regreg-py2.7-osx-10.8',
-                          'regreg-py2.6-osx-10.5-ppc',
+                          'regreg-py2.7-debian-ppc',
                        ]),
     pandas_bot.schedulers([
                         'pandas-py2.x-sid-sparc',
@@ -914,7 +913,7 @@ c['schedulers'] = sum([
                         'numpy-py2.7-osx-10.8',
                         'numpy-py3.3-osx-10.8',
                         'numpy-py3.4-osx-10.8',
-                        'numpy-py2.6-osx-10.5-ppc',
+                        'numpy-py2.7-debian-ppc',
                         'numpy-py2.x-sid-sparc',
                         'numpy-py3.x-sid-sparc',
                         ]),], []) + \
@@ -1423,7 +1422,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nibabel-py2.7-osx-10.7', osx_lion_slaves),
      ('nibabel-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nibabel-py2.7-debian-ppc', debian_ppc_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
      ('nibabel-py2.7-fedora', fedora_slaves),
@@ -1472,7 +1471,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nipy-py2.7-osx-10.7', osx_lion_slaves),
      ('nipy-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('nipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nipy-py2.7-debian-ppc', debian_ppc_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.7-fedora', fedora_slaves),
@@ -1501,7 +1500,7 @@ c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('dipy-py2.7-osx-10.7', osx_lion_slaves),
      ('dipy-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('dipy-py2.7-debian-ppc', debian_ppc_slaves),
      ('dipy-py2.7-fedora', fedora_slaves),
      ('dipy-py2.7-win32', win7_32_slaves),
      ('dipy-py2.6-squeeze-sparc', sparc_slaves),
@@ -1520,7 +1519,7 @@ c['builders'] += nipype_bot.build_builders(
      ('nipype-py2.6-32', linux_32_slaves),
      ('nipype-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nipype-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('nipype-py2.7-debian-ppc', debian_ppc_slaves),
      ('nipype-py2.7-fedora', fedora_slaves),
      ('nipype-py2.7-win32', win7_32_slaves)))
 c['builders'] += regreg_bot.build_builders(
@@ -1529,7 +1528,7 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('regreg-py2.7-osx-10.7', osx_lion_slaves),
      ('regreg-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('regreg-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('regreg-py2.7-debian-ppc', debian_ppc_slaves),
      ('regreg-py2.7-fedora', fedora_slaves),
      ('regreg-py2.7-win32', win7_32_slaves)))
 # Pandas - can be tested only on recent debian releases
@@ -1570,7 +1569,7 @@ c['builders'] += pymvpa_bot.build_builders(
      ('pymvpa-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('pymvpa-py2.7-osx-10.7', osx_lion_slaves),
      ('pymvpa-py2.7-osx-10.8', osx_mountainlion_slaves),
-     ('pymvpa-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('pymvpa-py2.7-debian-ppc', debian_ppc_slaves),
      ('pymvpa-py2.7-win32', win7_32_slaves),
     ), schedulers=c['schedulers'])
 # Sklearn
@@ -1608,7 +1607,7 @@ c['builders'] += fail2ban_bot.build_builders(
 # master does not support 2.5
 c['builders'] += fail2ban_bot.build_builders(
     (
-        ('fail2ban-py2.5-osx-10.5-ppc', osx_leopard_ppc_slaves),),
+        ('fail2ban-py2.7-debian-ppc', debian_ppc_slaves),),
     branches=['0.8'],
     install_cmd=None)
 # Psychopy
@@ -1631,7 +1630,7 @@ c['builders'] += numpy_bot.build_builders(
     (('numpy-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py3.3-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py3.4-osx-10.8', osx_mountainlion_slaves),
-     ('numpy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('numpy-py2.7-debian-ppc', debian_ppc_slaves),
      ('numpy-py2.x-sid-sparc', sparc_slaves_sid),
     ))
 c['builders'] += numpy_bot.build_builders(
@@ -1957,9 +1956,9 @@ def test_easy_and_no_easy(c):
 
 
 def test_fail2ban_08_state(c):
-    builders = _select_builders(c['builders'], 'fail2ban-py2\.5-osx-10\.5-ppc.*')
+    builders = _select_builders(c['builders'], 'fail2ban-py2\.7-debian-ppc.*')
     # we should still have branch suffix since it is not master
-    assert(builders[0].name == 'fail2ban-py2.5-osx-10.5-ppc_0.8')
+    assert(builders[0].name == 'fail2ban-py2.7-debian-ppc_0.8')
 
 
 def test_regression(c):
