Update extra dipy build with build timeout

--- a/master.cfg
+++ b/master.cfg
@@ -691,6 +691,7 @@ dipy_bot = GithubBot('nipy', 'dipy',
 dipy_bot_nox = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --with-doctest dipy'),
     pip_depends = ('nose', 'cython>=0.18', 'nibabel'),
+    build_timeout = 9600, # allow for longer registration builds
 )
 nipype_bot = GithubBot('nipy', 'nipype',
     test_cmd = nptest_command('nipype', doctests=True),
