Add example mac pro slave

--- a/master.cfg
+++ b/master.cfg
@@ -144,6 +144,7 @@ osx_tiger_ppc_slaves = ['osx-mini']
 osx_snowleopard_slaves = ['osx-10.6']
 osx_lion_slaves = ['osx-10.7']
 osx_mountainlion_slaves = ['osx-10.8']
+osx_yosemite_slaves = ['mac-pro']
 win7_32_slaves = ['win7-32-mini']
 win7_64_slaves = ['mike-win7-64']
 arm_slaves = ['arm-raspberry-pi']
@@ -823,6 +824,7 @@ c['schedulers'] = sum([
                            'nibabel-py2.7-osx-10.6',
                            'nibabel-py2.7-osx-10.7',
                            'nibabel-py2.7-osx-10.8',
+                           'nibabel-py2.7-osx-10.10',
                            'nibabel-py2.7-debian-ppc',
                            'nibabel-py3.4',
                            'nibabel-py3.3',
@@ -1423,6 +1425,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
      ('nibabel-py2.7-osx-10.7', osx_lion_slaves),
      ('nibabel-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('nibabel-py2.7-osx-10.10', osx_yosemite_slaves),
      ('nibabel-py2.7-debian-ppc', debian_ppc_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
@@ -1965,8 +1968,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 175)
-    assert(len(c['schedulers']) == 239)
+    assert(len(c['builders']) == 176)
+    assert(len(c['schedulers']) == 240)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
